--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* 
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #2C2C2C;
+  color: #000000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header {
+  text-align: center;
+  padding: 2rem;
+}
+
+header h1 {
+  color: #00FF00;
+}
+
+header p {
+  font-size: 1.2rem;
+}
+
+.skills {
+  padding: 2rem;
+}
+
+.skill-card {
+  background: #222;
+  padding: 1rem;
+  margin: 0.5rem;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.skill-card h3 {
+  margin-top: 1rem;
+}
+
+.Header{
+  background-color: #2C2C2C;
+}
+
+footer {
+  text-align: center;
+  padding: 2rem;
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Rubik+Glitch&display=swap');
+
+body{
+    background-color: #2c2c2c;
+    font-family: Poppins;
+    color: #FFFFFF;
 }
