--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -17,7 +17,7 @@
     color: #00FFF0;
     font-family: 'Glitch';
     padding-bottom: 0.5em;
-    font-size: 2em; 
+    font-size: 2.8rem; 
   }
   .header__texto{
     color: #ffffff;
