--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -12,7 +12,7 @@ nav.navbar {
   top: 0;
   z-index: 9999;
   transition:  0.32s ease-in-out;
-  background-color: rgb(0, 0, 0, 0.8);
+  background-color: rgb(0, 0, 0);
 }
 
 .navBar__menu{
